fix: fix layout issues

--- a/src/Styles/components/listagem/_filters.scss
+++ b/src/Styles/components/listagem/_filters.scss
@@ -359,6 +359,7 @@ body.departamento {
 									background-color: $purple-n;
 									color: #fff;
 									font-size: 1.1rem;
+									line-height: 1.1;
 								}
 							}
 							&.loading {
